<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Starbucks">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-314dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/saltedcaramelmocha"
                android:gravity="center"
                android:text="@string/salted_caramel_mocha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prix_30_00_dh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/cocoacloudmacchiato"
                android:gravity="center"
                android:text="@string/cocoa_cloud_macchiato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prix_40_00_dh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="81dp"
                android:drawableStart="@drawable/espressoconpanna"
                android:gravity="center"
                android:text="@string/espresso_con_panna"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prix_35_00_dh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

            <Button
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginStart="115dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="116dp"
                android:background="@drawable/textround"
                android:text="@string/commander"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/peppermintmocha"
                android:gravity="center"
                android:text="@string/peppermint_mocha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/prixespresso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="4dp"
                android:text="@string/prix_10_00_dh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/esspresso" />

            <CheckBox
                android:id="@+id/machiato"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/espressomacchiato"
                android:gravity="center"
                android:text="@string/espresso_macchiato"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prixespresso" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="4dp"
                android:text="@string/prix_35_00_dh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

            <CheckBox
                android:id="@+id/esspresso"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="26dp"
                android:drawableStart="@drawable/espresso"
                android:gravity="center"
                android:text="@string/espresso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="4dp"
                android:text="@string/prix_20_00_dh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machiato" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/caramelbruleelatte"
                android:gravity="center"
                android:text="@string/caramel_brulee_latte"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/eggnoglatte"
                android:gravity="center"
                android:text="@string/eggnog_latte"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="404dp"
                android:layout_height="49dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/numero_de_telephone"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adresse" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="4dp"
                android:text="@string/prix_33_00_dh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

            <EditText
                android:id="@+id/adresse"
                android:layout_width="404dp"
                android:layout_height="49dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/adresse"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/whitechocolatemocha"
                android:gravity="center"
                android:text="@string/white_chocolate_mocha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="188dp"
                android:layout_height="70dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/toastedwhitechocolatemocha"
                android:gravity="center"
                android:text="@string/toasted_white_chocolate_mocha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="87dp"
                android:layout_height="23dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="32dp"
                android:text="@string/nos_cafe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prix_30_00_dh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prix_8_00_dh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginTop="4dp"
                android:text="@string/prix_33_00_dh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>