<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img"
        android:layout_width="222dp"
        android:layout_height="147dp"
        android:contentDescription="@string/todo3"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="170dp"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/imgro"
            android:gravity="center"
            android:text="@string/rien"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="180dp"
            android:layout_height="33dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:background="@drawable/textround"
            android:text="@string/commander_une_caf"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>